// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressDiff > should render the component 1`] = `
<div>
  <address
    class="whitespace-pre-wrap not-italic"
    data-testid="address-diff"
  >
    <div
      class="diff-viewer-content"
    >
      <del
        class="bg-red-100"
      >
        123
      </del>
      <ins
        class="bg-green-100"
      >
        456
      </ins>
       
      <del
        class="bg-red-100"
      >
        M
      </del>
      <ins
        class="bg-green-100"
      >
        O
      </ins>
      a
      <del
        class="bg-red-100"
      >
        in
      </del>
      <ins
        class="bg-green-100"
      >
        k
      </ins>
       
      <del
        class="bg-red-100"
      >
        St 
      </del>
      A
      <del
        class="bg-red-100"
      >
        pt
      </del>
      <ins
        class="bg-green-100"
      >
        ve
      </ins>
       
      <del
        class="bg-red-100"
      >
        4
A
      </del>
      <ins
        class="bg-green-100"
      >
        U
      </ins>
      n
      <del
        class="bg-red-100"
      >
        y
      </del>
      <ins
        class="bg-green-100"
      >
        i
      </ins>
      t
      <del
        class="bg-red-100"
      >
        own
      </del>
       
      <ins
        class="bg-green-100"
      >
        5

      </ins>
      O
      <del
        class="bg-red-100"
      >
        N
      </del>
      <ins
        class="bg-green-100"
      >
        therville
      </ins>
       
      <ins
        class="bg-green-100"
      >
        QC
      </ins>
       
      <del
        class="bg-red-100"
      >
        K1A
      </del>
       
      <del
        class="bg-red-100"
      >
        0
      </del>
      <ins
        class="bg-green-100"
      >
        H2
      </ins>
      B
      <del
        class="bg-red-100"
      >
        1
      </del>
      <ins
        class="bg-green-100"
      >
         2C3
      </ins>
      
Canada
    </div>
  </address>
</div>
`;

exports[`AddressDiff > should render the component with an alternate format 1`] = `
<div>
  <address
    class="whitespace-pre-wrap not-italic"
    data-testid="address-diff"
  >
    <div
      class="diff-viewer-content"
    >
      <del
        class="bg-red-100"
      >
        123
      </del>
      <ins
        class="bg-green-100"
      >
        456
      </ins>
       
      <del
        class="bg-red-100"
      >
        M
      </del>
      <ins
        class="bg-green-100"
      >
        O
      </ins>
      a
      <del
        class="bg-red-100"
      >
        in
      </del>
      <ins
        class="bg-green-100"
      >
        k
      </ins>
       
      <del
        class="bg-red-100"
      >
        St 
      </del>
      A
      <del
        class="bg-red-100"
      >
        pt
      </del>
      <ins
        class="bg-green-100"
      >
        ve
      </ins>
       
      <del
        class="bg-red-100"
      >
        4
A
      </del>
      <ins
        class="bg-green-100"
      >
        U
      </ins>
      n
      <del
        class="bg-red-100"
      >
        y
      </del>
      <ins
        class="bg-green-100"
      >
        i
      </ins>
      t
      <ins
        class="bg-green-100"
      >
         5

      </ins>
      O
      <del
        class="bg-red-100"
      >
        wn
      </del>
      <ins
        class="bg-green-100"
      >
        therville
      </ins>
      , 
      <del
        class="bg-red-100"
      >
        ON
      </del>
      <ins
        class="bg-green-100"
      >
        QC
      </ins>
      

      <del
        class="bg-red-100"
      >
        K1A 0
      </del>
      <ins
        class="bg-green-100"
      >
        H2
      </ins>
      B
      <del
        class="bg-red-100"
      >
        1
      </del>
      <ins
        class="bg-green-100"
      >
         2C3
      </ins>
      
Canada
    </div>
  </address>
</div>
`;
